--- a/css/index.less
+++ b/css/index.less
@@ -1,33 +1,42 @@
+$lightgray: #f7f9fd;
+$pink: #ff52bf;
+$violet: #9a52ff;
+
 body {
-  position: relative;
-  background-color: #f7f9fd;
+  background-color: $light-gray;
 }
-
-.colored-bg {
-  height: 100vw;
-  width: 100vw;
-  background-color: purple;
+.bg-container {
   position: absolute;
-  top: -45vw;
-  left: 45vw;
-  transform: rotate(45deg);
-  border-radius: 10%;
-  z-index: 2;
-  background-image: linear-gradient(to right, #ff52bf, #9a52ff);
   overflow: hidden;
-}
-
-.white-bg {
-  height: 70vw;
-  width: 70vw;
-  background-color: #ffffff;
-  position: absolute;
-  top: 25vw;
-  left: 5vw;
-  transform: rotate(45deg);
-  border-radius: 10%;
   z-index: 1;
-  overflow: hidden;
+  width: 100vw;
+  min-height: 100vw;
+  .colored-bg {
+    height: 100vw;
+    width: 100vw;
+    background-color: purple;
+    position: absolute;
+    top: -45vw;
+    left: 45vw;
+    transform: rotate(45deg);
+    border-radius: 10%;
+    z-index: 3;
+    background-image: linear-gradient(to right, $pink, $pink);
+    overflow: hidden;
+  }
+
+  .white-bg {
+    height: 70vw;
+    width: 70vw;
+    background-color: #ffffff;
+    position: absolute;
+    top: 25vw;
+    left: 5vw;
+    transform: rotate(45deg);
+    border-radius: 10%;
+    z-index: 2;
+    overflow: hidden;
+  }
 }
 
 .container {
@@ -47,14 +56,14 @@ body {
       width: 50%;
       &.left {
         text-align: left;
-        padding-left: 3%;
+        padding-left: 5%;
         img {
           height: 30px;
         }
       }
       &.right {
         text-align: right;
-        padding-right: 3%;
+        padding-right: 5%;
         a {
           background-color: white;
           color: black;
@@ -68,13 +77,28 @@ body {
   }
   section {
     margin: auto;
+    width: 50vw;
     .hero {
       img {
-        width:60vw;
+        width:50vw;
       }
     }
     .hero-text {
-      width: 60vw;
+      h2 {
+        font-size: 1.5rem;
+      }
+      text-align: center;
+      padding: 10% 0%;
+      font-size: 1.25rem;
+      line-height: 2rem;
+      a {
+        background-color: white;
+        color: black;
+        padding: 1em 1.5em;
+        height: 30px;
+        text-decoration: none;
+        text-transform: uppercase;
+      }
     }
   }
 }
