--- a/css/index.less
+++ b/css/index.less
@@ -46,8 +46,8 @@ body {
       height: 100vw;
       width: 60vw;
       background-color: white;
-      transform: rotate(60deg);
-      top: 5vw;
+      transform: rotate(70deg);
+      top: 4vw;
       left: 15vw;
       z-index: 2;
       //-webkit-animation: teeter 10s infinite linear;
@@ -91,42 +91,81 @@ header {
     }
   }
 }
+
 main {
   z-index: 10;
   position: relative;
   width: 100%;
-  max-width:1100px;
   margin: auto;
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  section {
-    display: flex;
+  &.half {
+    max-width:1100px;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    .hero-img {
-      width: 75%;
+    section.hero {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      .hero-img {
+        width: 75%;
+      }
+      .hero-text {
+        width: 75%;
+        h2 {
+          font-size: 1.5rem;
+        }
+        text-align: center;
+        padding: 5rem 0;
+        p {
+          line-height: 2rem;
+          padding-bottom: 1.5rem;
+        }
+        a {
+          background-color: @pink;
+          color: white;
+          padding: 1em 1.5em;
+          height: 30px;
+          text-decoration: none;
+          text-transform: uppercase;
+          box-shadow: 0px 0px 10px -2px @pink;
+        }
+      }
     }
-    .hero-text {
-      width: 75%;
-      h2 {
-        font-size: 1.5rem;
+  }
+  &.full {
+    flex-direction: row;
+    section.pitches {
+      margin-top: 20%;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+    }
+    section.pitch-img {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      flex-basis: 45%;
+      img {
+        width: 80%;
       }
-      text-align: center;
-      padding: 5rem 0;
-      p {
-        line-height: 2rem;
-        padding-bottom: 1.5rem;
-      }
-      a {
-        background-color: @pink;
-        color: white;
-        padding: 1em 1.5em;
-        height: 30px;
-        text-decoration: none;
-        text-transform: uppercase;
-        box-shadow: 0px 0px 10px -2px @pink;
+    }
+    section.pitch-text {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      flex-basis: 45%;
+      article {
+        width: 90%;
+        h3 {
+          margin-bottom: 0px;
+        }
+        p {
+          margin-top: 0px;
+          line-height: 2rem;
+        }
       }
     }
   }
