--- a/css/index.less
+++ b/css/index.less
@@ -132,7 +132,7 @@ section.pitches {
   @media only screen and (max-width: 900px) {
     flex-direction: column;
   }
-  margin-top: 20%;
+  margin: 25% 0 15% 0;
   justify-content: center;
   section.pitch-img {
     display: flex;
@@ -179,16 +179,29 @@ section.hero {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  .call-to-action {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    padding: 10px 10px;
+    box-shadow: 0px 0px 20px -10px @mid-gray;
+    width: 70%;
+    .hero-text {
+      padding: 1.5rem 0 4rem 0;
+    }
+  }
   .hero-img {
     width: 75%;
   }
   .hero-text {
     width: 75%;
+    text-align: center;
+    padding: 5rem 0;
     h2 {
       font-size: 1.5rem;
     }
-    text-align: center;
-    padding: 5rem 0;
     p {
       line-height: 2rem;
       padding-bottom: 1.5rem;
